# game-of-life

./: .gitignore  README.md  bun.lockb  go.mod  index.html  main.go  main.odin  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
game/: game.go  game.odin  types.odin
grid/: grid.go
renderer/: menu.go  renderer.go  ui.go
src/: App.vue  constants.lua  constants.py  game.lua  game.py  game.ts  grid.lua  grid.py  input.lua  main.lua  main.odin  main.py  main.ts  style.css  ui.lua
src/assets/: global.css
src/components/: Controls.vue  GameGrid.vue
src/logic/: logic.odin  render.odin
src/render/: render.odin
ui/: menu.go  renderer.go  ui.go
utils/: constants.go  coordinates.go
