[project]
name = "game-of-life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pygame>=2.6.1"]

[dependency-groups]
dev = ["ruff>=0.14.10", "ty>=0.0.4"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
